<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Procrastigain</string>
    <string name="title_party_detail">Party Detail</string>
    <string name="title_login">Login</string>
    <string name="header_rsvp_user">Who</string>
    <string name="header_rsvp_rsvp">RSVP</string>
    <string name="label_rsvp">Your RSVP: </string>
    <string name="rsvp_yes">I\'m Going!</string>
    <string name="rsvp_maybe">Maybe</string>
    <string name="rsvp_no">No</string>
    <string name="login_for_rsvp">Please Login to RSVP</string>
    <string name="welcome_message">Get. Insanely. Productive.</string>
    <string name="button_my_tasks">My Tasks</string>
    <string name="button_new_task">Add New Task</string>
    <string name="title_activity_my_tasks">My Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="title_activity_new_task">Create New Task</string>
    <string name="new_task_title">Title</string>
    <string name="hint_new_task_title">Name your task</string>
    <string name="new_task_time">Time needed to complete</string>
    <string name="new_task_hours">Hour(s)</string>
    <string name="new_task_minutes">Minute(s)</string>
    <string name="new_task_appeal">Appeal</string>
    <string name="new_task_hate">Hate</string>
    <string name="new_task_love">Love</string>
    <string name="button_new_task_submit">Submit</string>
    <string name="new_task_date">Due Date</string>
    <string name="new_task_pick_date">Change</string>
    <string name="task_edit">Edit</string>
    <string name="task_work">Work on this</string>
    <string name="task_name_placeholder">My Task</string>
    <string name="action_new_task">Create New Task</string>

    <string-array name="hours_spinner_ints">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>
    <string-array name="minutes_spinner_ints">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string name="title_activity_edit_task">Edit Task</string>

</resources>
